fix: improve settings layout on mobile

--- a/src/Settings/Settings.scss
+++ b/src/Settings/Settings.scss
@@ -11,15 +11,24 @@
   }
 
   fieldset {
-    border-radius: 5px;
-    border: 1px solid #cccccc;
-    padding: 0.5rem 1rem 0 1rem;
+    @media (min-width: $mobile-breakpoint) {
+      border-radius: 5px;
+      border: 1px solid #cccccc;
+      padding: 0.5rem 1rem 0 1rem;
+      margin-bottom: 1rem;
+    }
     legend {
       width: auto;
       margin: 0;
       font-size: 100%;
     }
-    margin-bottom: 1rem;
+    .sidebyside {
+      @media (max-width: $mobile-breakpoint) {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-column-gap: 1rem;
+      }
+    }
   }
   .btn-group {
     width: 100%;
